# training-plan-service

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml
training_plan_service/: __init__.py  config.py  database.py  models.py  notion.py  routes.py  types.py
