[tool.poetry]
name = "training-plan-service"
version = "0.1.0"
description = ""
authors = ["Andrew Yatsura <andrewyazura203@gmail.com>"]
readme = "README.md"
packages = [{include = "training_plan_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
motor = "^3.1.1"
httpx = "^0.24.0"


[tool.poetry.group.prod.dependencies]
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"
types-requests = "^2.28.11.17"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
